packages/CodingStandard/DotBlue/tests/valid/BoolNaming.php
<?php

namespace Foo;


class Bar
{

	/**
	 * @return bool
	 */
	public function foo()
	{
		return FALSE;
	}



	/**
	 * @param  bool
	 */
	public function bar($bool)
	{
		/** @var bool $test */
		$test = FALSE;
	}

}
