packages/CodingStandard/DotBlue/tests/invalid/UnusedPrivateProperties.php
<?php

namespace Foo;


class Foo
{

	private $foo;

	private $bar;



	public function foo()
	{
		$this->foo = 'bar';
	}

}
